[gd_scene load_steps=6 format=3 uid="uid://cr0sftdgxd74g"]

[ext_resource type="Script" uid="uid://c4dbnakuh3bg8" path="res://scenes/ui/options_screen.gd" id="1_7bvjn"]
[ext_resource type="Theme" uid="uid://b1bieqo2r86g6" path="res://gui_theme.tres" id="1_fpwlp"]
[ext_resource type="PackedScene" uid="uid://bj1cfu1sux7x1" path="res://utils/controls/range_picker.tscn" id="2_8sxsw"]
[ext_resource type="PackedScene" uid="uid://or5u71p06k7m" path="res://utils/controls/toggle_picker.tscn" id="3_7bvjn"]
[ext_resource type="PackedScene" uid="uid://b32cflp5pvndx" path="res://utils/controls/label_picker.tscn" id="4_eckhm"]

[node name="OptionsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7bvjn")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 13
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 13
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="OptionsLabel" type="Label" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_fpwlp")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "OPTIONS"
horizontal_alignment = 1

[node name="MusicVolumeControl" parent="Background/MarginContainer/VBoxContainer" instance=ExtResource("2_8sxsw")]
layout_mode = 2
current_value = 5
max_value = 10
text = "MUSIC"

[node name="SoundVolumeControl" parent="Background/MarginContainer/VBoxContainer" instance=ExtResource("2_8sxsw")]
layout_mode = 2
current_value = 5
max_value = 10
text = "SFX"

[node name="ShakeToggle" parent="Background/MarginContainer/VBoxContainer" instance=ExtResource("3_7bvjn")]
layout_mode = 2
theme_override_constants/separation = 1
text = "SHAKE"

[node name="ReturnButton" parent="Background/MarginContainer/VBoxContainer" instance=ExtResource("4_eckhm")]
layout_mode = 2
theme_override_constants/separation = 1
text = "RETURN"
